--- a/Reading-FrontEnd/book.html
+++ b/Reading-FrontEnd/book.html
@@ -28,7 +28,7 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">View</a>
+              <a class="nav-link"  href="search-box.html">Search</a>
             </li>
 
           </ul>
@@ -50,6 +50,7 @@
                 <input class="form-control" type="text" name="pages" id="pages"  required>
                 <label class="form-label" for="releaseYear">Year of Release:</label>
                 <input class="form-control" type="text" name="releaseYear" id="releaseYear" required>
+
                 <div class="mt-3">
                     <button class="btn btn-danger" type="reset">RESET</button>
                     <button class="btn btn-primary" type="submit">SUBMIT</button>
