--- a/Reading-FrontEnd/search-box.html
+++ b/Reading-FrontEnd/search-box.html
@@ -34,7 +34,7 @@
                     placeholder="search"
                 />
             </div>
-            <ul id="charactersList"></ul>
+            <ul id="readingList"></ul>
         </div>
         <script src="search-box.js"></script>
     </body>
