--- a/Reading-FrontEnd/book.html
+++ b/Reading-FrontEnd/book.html
@@ -61,6 +61,6 @@
             <div id="output" class="row row-cols-3 g-6"></div>
         </section>
     </main>
-    <script src="./index.js"></script>
+    <script src="./book.js"></script>
 </body>
 </html>
