fixed update issue

--- a/Reading-FrontEnd/index.html
+++ b/Reading-FrontEnd/index.html
@@ -9,19 +9,19 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <title>I <3 Reading </title>
 </head>
-<body>
+<body class="container">
  
     <div class="row">
-        <ul class="nav justify-content-center">
+        <ul class="nav justify-content-right">
                         
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="book.html">Reading List</a>
+              <a class="nav-link" href="book.html">Create</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"  href="search-box.html">Search</a>
+              <a class="nav-link"  href="search-box.html"> My Books</a>
             </li>
           </ul>
     
