--- a/ReadingList/src/main/resources/static/Reading-FrontEnd/search-box.html
+++ b/ReadingList/src/main/resources/static/Reading-FrontEnd/search-box.html
@@ -12,7 +12,7 @@
 <body class="container" >
  
     <div class="row">
-      <ul class="nav justify-content-right">
+      <ul class="nav justify-content-center">
                         
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
@@ -25,7 +25,7 @@
         </li>
         
       </ul>
-          </ul>
+    </ul>
         <div class="searchBar">
           <input type="text" name="searchBar" id="searchBar" placeholder="search" />
           <br>
