--- a/ReadingList/src/main/resources/static/index.html
+++ b/ReadingList/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
 <body class="container">
  
     <div class="row">
-        <ul class="nav justify-content-right">
+        <ul class="nav justify-content-center">
                         
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
