--- a/ReadingList/src/main/resources/static/index.html
+++ b/ReadingList/src/main/resources/static/index.html
@@ -8,13 +8,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <title>I <3 Reading </title>
+<style>
+   .nav {
+    --bs-nav-link-padding-x: 1rem;
+    --bs-nav-link-padding-y: 0.5rem;
+    --bs-nav-link-font-weight: ;
+    --bs-nav-link-color: green(--bs-link-color);
+    --bs-nav-link-hover-color: var(--bs-link-hover-color);
+    --bs-nav-link-disabled-color: #6c757d;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style:  inherit;
+}
+</style>
+
+
 </head>
-<body class="container">
- 
-    <div class="row">
-        <ul class="nav justify-content-center">
-                        
-            <li class="nav-item">
+<div id="demo">My Reading List</div>
+<body class="container">    <div class="row2">
+        <ul class="nav justify-content-center">            <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
@@ -24,16 +38,17 @@
               <a class="nav-link"  href="search-box.html"> My Books</a>
             </li>
           </ul>
-    
     </div>
     <!-- <a href="book.html">Reading List</a> -->
 </div>
-
-<h2 class="paragraph1"> about the project, orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h2>
+</body><div class="banner">
+    <img class="banner_img" src="images/BOOKSHELF.gif"  alt="centered gif"  >
+</div>
+<h3 class="paragraph1"> 
+     Purpose of the application: <br>
+     The general purpose of this application is to allow users to keep track of their current reading list and store the data within the application. The functionality of the app allows for users to input a book into the their current reading list and lastly, incorporates the ability to remove a book from thier reading list once the user has completely read the book.</h3>
 </br>
-<h2 class="paragraph2"> importance fo Readin, orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.g</h2>
+<h2 class="paragraph2"> The Importance Of Reading: <br> gets your mind working across different areas. For starters, it involves comprehension to process the words you read. Beyond that, you can use your analytical abilities, stimulate memories, and even broaden your imagination by reading words off a page.Reading is a neurobiological process that works out your brain muscles. As you do so, you can help to slow down cognitive decline and even decrease the rate at which memory fades. Scientists at the University of California, Berkeley have even found that reading reduces the level of beta-amyloid, which is a protein in the brain that is connected to Alzheimers.</h2>
 </br>
-<h2 class="paragraph3"> upcoming authorsm orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h2>
-
-</body>
+<h2 class="paragraph3"> Author of the Week:<br>  J.K. Rowling, in full Joanne Kathleen Rowling, pen name of Joanne Rowling, (born July 31, 1965, Yate, near Bristol, England), British author, creator of the popular and critically acclaimed Harry Potter series, about a young sorcerer in training. The first book in the Harry Potter series, Harry Potter and the Philosopher’s Stone (1997; also published as Harry Potter and the Sorcerer’s Stone), was released under the name J.K. Rowling. (Her publisher recommended a gender-neutral pen name; born Joanne Rowling, she used J.K., adding the middle name Kathleen.) The book was an immediate success, appealing to both children, who were its intended audience, and adults. Featuring vivid descriptions and an imaginative story line, it followed the adventures of the unlikely hero Harry Potter, a lonely orphan who discovers that he is actually a wizard and enrolls in the Hogwarts School of Witchcraft and Wizardry. The book received numerous awards, including the British Book Award. Succeeding volumes—Harry Potter and the Chamber of Secrets (1998), Harry Potter and the Prisoner of Azkaban (1999), Harry Potter and the Goblet of Fire (2000), Harry Potter and the Order of the Phoenix (2003), and Harry Potter and the Half-Blood Prince (2005)—also were best sellers, available in more than 200 countries and some 60 languages. The seventh and final novel in the series, Harry Potter and the Deathly Hallows, was released in 2007.</h2></body>
 </html>
