--- a/ReadingList/src/main/resources/static/search-box.html
+++ b/ReadingList/src/main/resources/static/search-box.html
@@ -29,7 +29,7 @@
         <div class="searchBar">
           <input type="text" name="searchBar" id="searchBar" placeholder="search" />
           <br>
-            <h1>&#x2728; My Reading List &#x2728;</h1>
+            <h1>&#x2728; My Book Shelf &#x2728;</h1>
             <div id="searchWrapper">
               <br>
              
