Update Front end styling

--- a/ReadingList/src/main/resources/static/search-box.html
+++ b/ReadingList/src/main/resources/static/search-box.html
@@ -8,6 +8,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <title>I <3 Reading </title>
+            <style>
+                .nav {
+                 --bs-nav-link-padding-x: 1rem;
+                 --bs-nav-link-padding-y: 0.5rem;
+                 --bs-nav-link-font-weight: ;
+                 --bs-nav-link-color: #F3BC77(--bs-link-color);
+                 --bs-nav-link-hover-color: var(--bs-link-hover-color);
+                 --bs-nav-link-disabled-color: #6c757d;
+                 display: flex;
+                 flex-wrap: wrap;
+                 padding-left: 0;
+                 margin-bottom: 0;
+                 list-style:  inherit;
+             }
+             </style>
+             
 </head>
 <body class="container" >
  
