--- a/ReadingList/src/main/resources/static/book.html
+++ b/ReadingList/src/main/resources/static/book.html
@@ -12,7 +12,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"
         integrity="sha512-xIPqqrfvUAc/Cspuj7Bq0UtHNo/5qkdyngx6Vwt+tmbvTLDszzXM0G6c91LXmGrRx8KEPulT+AfOOez+TeVylg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        
+        <style>
+            .nav {
+             --bs-nav-link-padding-x: 1rem;
+             --bs-nav-link-padding-y: 0.5rem;
+             --bs-nav-link-font-weight: ;
+             --bs-nav-link-color: #F3BC77(--bs-link-color);
+             --bs-nav-link-hover-color: var(--bs-link-hover-color);
+             --bs-nav-link-disabled-color: #6c757d;
+             display: flex;
+             flex-wrap: wrap;
+             padding-left: 0;
+             margin-bottom: 0;
+             list-style:  inherit;
+         }
+         </style>
+         
 </head>
 
 <body class="container">
